<resources>
    <string name="app_name">AI车检</string>
    <string name="app_tip">提示</string>
    <string name="onMain">立即体验</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="hint_sign_up">没有账号？ 立即注册</string>
    <string name="hint_agree">注册</string>
    <string name="sign_up">注册</string>
    <string name="sign_in">登录</string>
    <string name="hint_pwd">密码</string>
    <string name="hint_smd">验证码</string>
    <string name="hint_new_pwd">新密码</string>
    <string name="hint_new_pwd_ok">确认新密码</string>
    <string name="hint_user">手机号</string>
    <string name="hint_nick">昵称</string>
    <string name="hint_code">获取验证码</string>
    <string name="des_log">We pursue a relaxed gaming experience</string>
    <string name="morning">Morning</string>
    <string name="login_title">账号密码登录 </string>
    <string name="register_title">您好, 欢迎注册 </string>
    <string name="title_home">首页</string>
    <string name="title_my">我的</string>
    <string name="changPWD">修改密码</string>
    <string name="about">关于我们</string>
    <string name="version">版本信息</string>
    <string name="ceshishebei">测试设备</string>
    <string name="unabletoconnect">无法连接到设备</string>
    <string name="connectionlost">与设备连接已断开</string>
    <string name="elm_timeout_descr">等待ELM响应的最小超时时间 [ms]</string>
    <string name="connected_to">"连接到 "</string>
    <string name="title_connecting">正在连接…</string>
    <string name="title_connected_to">已连接</string>
    <string name="title_connected_fail">连接失败</string>
    <string name="设备_setting">设置</string>
    <string name="user_setting">用户设置</string>
    <string name="exit_login">退出登录</string>
    <string name="faceback">意见反馈</string>
    <string name="pref_gps_category_summaryOff">打开GPS</string>
    <string name="pref_gps_category_summaryOn">关闭GPS</string>
    <string name="pref_gps_update_period_title">更新周期（秒）</string>
    <string name="pref_gps_update_period_summary">查询新位置之间的时间（秒）</string>
    <string name="pref_gps_distance_period_title">更新距离（米）</string>
    <string name="pref_gps_distance_period_summary">查询新位置之间的距离（米）</string>
    <string name="obd_protocol">设备协议</string>
    <string name="pref_imperial_units_title">英制单位</string>
    <string name="title_pref_commands">设备 指令</string>
    <string name="Bluetooth_Name">蓝牙</string>
    <string name="gps_name">GPS</string>
    <string name="text_bluetooth_error_connecting">不能连接到蓝牙设备!</string>
    <string name="update_distance">修改更新距离(米)</string>
    <string name="update_period">修改更新周期(秒)</string>
    <string name="notification_action">点击打开 Android 设备-II</string>
    <string name="service_starting">正在开启 设备 连接..</string>
    <string name="service_started">设备 连接已经开启.</string>
    <string name="service_stopped">设备 连接已经关闭.</string>
    <string name="status_no_bluetooth_id">不可用的</string>
    <string name="status_bluetooth_disabled">未打开的</string>
    <string name="status_bluetooth_ok">准备中</string>
    <string name="status_bluetooth_connecting">连接中&#8230;</string>
    <string name="status_bluetooth_connected">已连接</string>
    <string name="status_bluetooth_error_connecting">连接失败</string>
    <string name="text_bluetooth_nodevice">没有蓝牙设备可选</string>
    <string name="myCar">我的车辆</string>
    <string name="status_obd_disconnected">未连接</string>
    <string name="status_gps_started">GPS开始</string>
    <string name="status_gps_stopped">GPS结束</string>
    <string name="status_gps_ready">GPS准备中</string>
    <string name="status_gps_fix">GPS已确定</string>
    <string name="status_gps_no_support">GPS不可用</string>
    <string name="status_obd_no_support">设备不可用</string>
    <string name="status_obd_data">正在接收设备数据&#8230;</string>
    <string name="select_type_pic">选择照片</string>
    <string name="select_type_content">请选取照片方式</string>
    <string name="select_album">相册</string>
    <string name="select_camera">照相</string>
    <string name="update_pwd">修改密码</string>
    <string name="confirm">确定</string>
    <string name="Remember_password">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="myPay">服务购买</string>
    <string name="loading">正在加载…</string>
    <string name="faultCode">查询故障码</string>
    <string name="add_car">添加车辆</string>
    <string name="automobileBrandName">汽车品牌</string>
    <string name="modelName">型号</string>
    <string name="fuelType">燃油类型(#)</string>
    <string name="transmissionType">变速箱类型</string>
    <string name="currentMileage">当前里程(公里)</string>
    <string name="car_base_info">车辆基础信息</string>
    <string name="bluetoothDeviceNumber">蓝牙设备</string>
    <string name="addVehicle">添加</string>
    <string name="action_settings">Settings</string>
    <string name="search_contact">搜索联系人</string>
    <string name="no_contact">没有找到联系人</string>
    <string name="automobileBrand">车辆品牌</string>
    <string name="hint_automobileBrandName">请选择汽车品牌</string>
    <string name="hint_modelName">请选择型号</string>
    <string name="hint_fuelType">请选择燃油类型</string>
    <string name="hint_transmissionType">请选择变速箱类型</string>
    <string name="hint_currentMileage">请输入当前里程(公里)</string>
    <string name="hint_bluetoothDeviceNumber">请选择蓝牙设备</string>
    <string name="carModel">品牌型号</string>
    <string name="fuelTypeTitle">燃油类型</string>
    <string name="bt_name">蓝牙设备</string>
    <string name="text_smd_msg">短信登录</string>
    <string name="text_pwd_msg">账号登录</string>
    <string name="login_version">版权所有,翻版必究</string>
    <string name="str_copyright">Copyright © 2021–2025 GANSU YIQIANG</string>
    <string name="car_expand_info">车辆扩展信息</string>
    <string name="EngineDisplacement">引擎排气量/排量(升)</string>
    <string name="EngineNumber">发动机号</string>
    <string name="FuelCost">油价</string>
    <string name="GrossVehicleWeight">汽车总重(KG)</string>
    <string name="LastMaintenanceDate">上次保养日期</string>
    <string name="LastMaintenanceMileage">上次保养里程(公里)</string>
    <string name="LicensePlateNumber">车牌号</string>
    <string name="MaintenanceInterval">保养时间间隔(月)</string>
    <string name="MaintenanceMileageInterval">保养里程间隔(公里)</string>
    <string name="TankCapacity">油箱容量(升)</string>
    <string name="VehiclePurchaseDate">车辆购置日期</string>
    <string name="VehicleStatusName">车辆状态</string>
    <string name="YearManufacture">出厂年份</string>
    <string name="logo">Logo</string>
    <string name="hint_EngineNumber">请输入发动机号码</string>
    <string name="hint_FuelCost">请输入油价</string>
    <string name="hint_GrossVehicleWeight">请输入汽车总重(KG)</string>
    <string name="hint_LastMaintenanceDate">请选择上次保养日期</string>
    <string name="hint_LastMaintenanceMileage">请输入上次保养里程(公里)</string>
    <string name="hint_LicensePlateNumber">请输入车牌号</string>
    <string name="hint_MaintenanceInterval">请输入保养时间间隔(月)</string>
    <string name="hint_MaintenanceMileageInterval">请输入保养里程间隔(公里)</string>
    <string name="hint_TankCapacity">请输入油箱容量(升)</string>
    <string name="hint_VehiclePurchaseDate">请选择车辆购置日期</string>
    <string name="hint_YearManufacture">请选择出厂年份</string>
    <string name="hint_EngineDisplacement">请输入引擎排气量/排量(升)</string>
    <string name="agree_content">请点击阅读</string>
    <string name="register_protocol">《用户协议及隐私政策》</string>
    <string name="hint_sex">性别</string>
    <string name="home_more_dash">更多仪表盘</string>
    <string name="home_average_speed">平均时速</string>
    <string name="home_high_speed">最高时速</string>
    <string name="home_low_speed">最低时速</string>
    <string name="home_current_speed">当前时速</string>
    <string name="speed_unit">km/h</string>
    <string name="title_check">检测</string>
    <string name="title_msg">消息</string>
    <string name="check_title">全车检测</string>
    <string name="my">我的</string>
    <string name="help">使用帮助</string>
    <string name="history_record">历史记录</string>
    <string name="buy_history">购买记录</string>
    <string name="update">修改</string>
    <string name="buy">立即购买</string>
    <string name="recharge_record">购买记录</string>
    <string name="submit">提交</string>
    <string name="hint_feedback">输入你的反馈内容</string>
    <string name="hint_contact">QQ,微信,手机号(非必填)</string>
    <string name="text_contact">联系方式</string>
    <string name="msg_center">消息中心</string>
    <string name="hint_home_obd">设备序列号</string>
    <string name="text_connect_obd">请连接设备设备,进行检测</string>
    <string name="mydash">我的仪表盘</string>
    <string name="mInsFuelConsumption">瞬时油耗 (L/100km)</string>
    <string name="mOdometer">行驶里程 (km/10)</string>
    <string name="DrivingDuration">行驶时间 (min)</string>
    <string name="dashSpeed">车速仪表</string>
    <string name="dashRPM">转速仪表</string>
    <string name="mEngineCoolantTemp">冷却液温度</string>
    <string name="InsFuelConsumption">瞬时油耗</string>
    <string name="IdlingFuelConsumption">怠速油耗</string>
    <string name="DrivingFuelConsumption">行驶油耗</string>
    <string name="EngineOilTemp">引擎油温</string>
    <string name="cancel">取消</string>
    <string name="selectVehicle">选择车辆</string>
    <string name="car_check_record">车检记录</string>
    <string name="dash">仪表功能</string>
    <string name="select_add_car">选择添加我的车辆</string>
    <string name="person_set">个人设置</string>
    <string name="header">头像</string>
    <string name="nick">昵称</string>
    <string name="phone">手机</string>
    <string name="sex">性别</string>
    <string name="validityDate">截止有效期</string>
    <string name="vip">是否VIP</string>
    <string name="isTheDeviceBound">是否绑定设备</string>
    <string name="obd_search">设备搜索</string>
    <string name="speed">车速</string>
    <string name="engineRpm">发动机转速</string>
    <string name="IdlingDuration">空闲时间</string>
    <string name="speedMax">最高车速</string>
    <string name="engineRpmMax">最大转速</string>
    <string name="mRapidDeclTimes">速降次数</string>
    <string name="mRapidAccTimes">加速次数</string>
    <string name="mIdleMaf">怠速空气流量</string>
    <string name="mDrivingMaf">驱动空气流量</string>
    <string name="mIgnitionMonitor">点火监视器</string>
    <string name="mDescribeProtocolNumber">描述协议编号</string>
    <string name="mDescribeProtocol">描述协议</string>
    <string name="mWideBandAirFuelRatio">宽带空燃比</string>
    <string name="mAirFuelRatio">空燃比</string>
    <string name="mEngineOilTemp">发动机油温</string>
    <string name="mCommandedEGR">指令EGR</string>
    <string name="mAbsLoad">绝对负荷</string>
    <string name="mDistanceTraveledMilOn">MIL开时行驶的距离</string>
    <string name="mVehicleIdentificationNumber">车辆识别号（VIN）</string>
    <string name="mFuelRailPressurevacuum">相对于歧管真空的燃油分供管压力</string>
    <string name="mFuelRailPressure">燃油分供管压力</string>
    <string name="mControlModuleVoltage">控制模组电压</string>
    <string name="DistanceTraveledAfter">代码清除后的距离</string>
    <string name="mEquivRatio">指令当量比</string>
    <string name="mDtcNumber">故障诊断码</string>
    <string name="mTimingAdvance">定时提前</string>
    <string name="mFuelConsumptionRate">燃油消耗率</string>
    <string name="mFuelSystemStatus">燃油系统状态</string>
    <string name="mFuelTypeValue">燃料类型</string>
    <string name="mFuelLevel">燃油油位</string>
    <string name="mPermanentTroubleCode">永久性故障代码</string>
    <string name="mPendingTroubleCode">未决故障代码</string>
    <string name="mFaultCodes">故障代码</string>
    <string name="mThrottlePos">节气门位置</string>
    <string name="mMassAirFlow">空气质量流量</string>
    <string name="engineRuntime">引擎运行时间</string>
    <string name="mEngineLoad">发动机负荷</string>
    <string name="进气歧管压力">进气歧管压力</string>
    <string name="mFuelPressure">燃油压力</string>
    <string name="mBarometricPressure">大气压</string>
    <string name="mAmbientAirTemp">环境空气温度</string>
    <string name="mIntakeAirTemp">油箱空气温度</string>
    <string name="mIntakePressure">进气歧管压力</string>
    <string name="receive_address">详细地址</string>
    <string name="moblePhone">手机号码</string>
    <string name="selectArea">选择地区</string>
    <string name="hint_SelectArea">请选择省、市、区</string>
    <string name="hint_name">名字</string>
    <string name="hint_phone">手机号</string>
    <string name="hint_DetailsAddress">请输入街道、小区楼栋/乡村名称</string>
    <string name="contractRecoder">通讯录</string>
    <string name="update_address">修改</string>
    <string name="update_add">修改收货地址</string>
</resources>