<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_check"
        android:icon="@drawable/icon_home_check"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_check" />
    <item
        android:id="@+id/navigation_msg"
        android:icon="@drawable/icon_home_msg"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_msg" />
    <item
        android:id="@+id/navigation_my"
        android:icon="@drawable/ic_my"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="@string/title_my" />

</menu>
