<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_080707"
    android:orientation="vertical">

    <com.hjq.bar.TitleBar
        android:id="@+id/titleBarSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barStyle="night"
        app:lineVisible="false"
        app:title="@string/add_car" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/color_2c2c2c"
                android:fontFamily="@font/calibri"
                android:gravity="center_vertical"
                android:paddingStart="10dp"
                android:text="@string/car_base_info"
                android:textColor="@color/white"
                android:textColorHint="@color/gray_check"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/automobileBrandName"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvAutomobileBrandName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/icon_next"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_automobileBrandName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_check"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/modelName"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvModelName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/icon_next"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_modelName"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_check"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/fuelType"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvFuelType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/icon_next"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_fuelType"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_check"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/transmissionType"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvTransmissionType"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/icon_next"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_transmissionType"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_check"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlHardcoded" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/currentMileage"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlSymmetry" />

                <EditText
                    android:id="@+id/tvCurrentMileage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:drawableEnd="@drawable/icon_next"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_currentMileage"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_check"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlHardcoded,RtlSymmetry,TextFields" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_light" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/gotham"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp_10"
                    android:text="@string/bluetoothDeviceNumber"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/tvBluetoothDeviceNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableEnd="@drawable/icon_next"
                    android:gravity="center_vertical|right"
                    android:hint="@string/hint_bluetoothDeviceNumber"
                    android:textColor="@color/white"
                    android:textColorHint="@color/gray_check"
                    android:textSize="@dimen/text_13sp"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_light" />

            <com.example.obdandroid.ui.view.progressButton.CircularProgressButton
                android:id="@+id/btnAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/calibri"
                android:textColor="@color/cpb_white"
                android:textSize="18sp"
                app:cpb_cornerRadius="10dp"
                app:cpb_iconComplete="@drawable/ic_action_accept"
                app:cpb_iconError="@drawable/ic_action_cancel"
                app:cpb_selectorComplete="@drawable/complete_state_selector"
                app:cpb_selectorError="@drawable/error_state_selector"
                app:cpb_selectorIdle="@drawable/idle_state_selector"
                app:cpb_textIdle="@string/addVehicle" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>